--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,19 +1,19 @@
-.App {
+.Home {
   text-align: center;
 }
 
-.AppLogo {
+.HomeLogo {
   height: 40vmin;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .AppLogo {
-    animation: App-logo-spin infinite 20s linear;
+  .HomeLogo {
+    animation: Home-logo-spin infinite 20s linear;
   }
 }
 
-.AppHeader {
+.HomeHeader {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -24,11 +24,11 @@
   color: white;
 }
 
-.AppLink {
+.HomeLink {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
+@keyframes Home-logo-spin {
   from {
     transform: rotate(0deg);
   }
