--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,24 +2,24 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  margin: 0 15%;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  monospace;
+}
+
+.container {
+  margin: 0 15%;
 }
 
 ul {
-  align-items: stretch;
-  box-sizing: border-box;
   display: table;
   justify-content: center;
   list-style-type: none;
   margin: auto;
-  min-width: none;
   overflow: hidden;
   padding: 0;
   table-layout: fixed;
