--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -13,7 +13,7 @@
   }
 }
 
-.HomeHeader {
+/* .HomeHeader {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -22,7 +22,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
+} */
 
 .HomeLink {
   color: #61dafb;
@@ -32,6 +32,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
